add pages with projects and skills

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <div class="nav__row">
         <a href="/html" class="logo"><strong>Freelancer</strong> portfolio</a>
         <ul class="nav__list">
-          <li class="nav__list-item"><a href="/projects" class="nav__list-link nav__list-link--active">Projects</a></li>
-          <li class="nav__list-item"><a href="/skills" class="nav__list-link">Skills</a></li>
-          <li class="nav__list-item"><a href="/contacts" class="nav__list-link">Contacts</a></li>
+          <li class="nav__list-item"><a href="/project_page.html" class="nav__list-link nav__list-link--active">Projects</a></li>
+          <li class="nav__list-item"><a href="/skills.html" class="nav__list-link">Skills</a></li>
+          <li class="nav__list-item"><a href="/contacts.html" class="nav__list-link">Contacts</a></li>
         </ul>
       </div>
     </div>
@@ -84,6 +84,26 @@
       </ul>
     </div>
   </main>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__wrapper">
+        <ul class="social">
+          <li class="social__item"><a href="#!"><img src="./img/icons/Vector-1.svg" alt="link"></a></li>
+          <li class="social__item"><a href="#!"><img src="./img/icons/Vector-2.svg" alt="link"></a></li>
+          <li class="social__item"><a href="#!"><img src="./img/icons/Vector-3.svg" alt="link"></a></li>
+          <li class="social__item"><a href="#!"><img src="./img/icons/Vector-4.svg" alt="link"></a></li>
+          <li class="social__item"><a href="#!"><img src="./img/icons/Vector.svg" alt="link"></a></li>
+        </ul>
+        <div class="copyright">
+          <p>
+             @t.me/freecode_22 
+          </p>
+      </div>
+      </div>
+      
+    </div>
+  </footer>
   
 </body>
 </html>
