add adaptive and script, change dark and light theme

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <div class="container">
       <div class="nav__row">
         <a href="/html" class="logo"><strong>Freelancer</strong> portfolio</a>
+
+        <button class="dark-mode-btn">
+          <img src="./img/icons/sun-light.svg" alt="Light mode" class="dark-mode-btn__icon">
+          <img src="./img/icons/moon-light.svg" alt="Dark mode" class="dark-mode-btn__icon">
+        </button>
+
         <ul class="nav__list">
           <li class="nav__list-item"><a href="/project_page.html" class="nav__list-link nav__list-link--active">Projects</a></li>
           <li class="nav__list-item"><a href="/skills.html" class="nav__list-link">Skills</a></li>
@@ -38,7 +44,7 @@
  
   </header>
 
-  <main class="section">
+  <div class="section">
     <div class="container">
       <h2 class="title-1">
         Projects
@@ -83,7 +89,7 @@
         </li>
       </ul>
     </div>
-  </main>
+  </div>
 
   <footer class="footer">
     <div class="container">
@@ -104,6 +110,6 @@
       
     </div>
   </footer>
-  
+  <script src="script/script.js"></script>
 </body>
 </html>
