--- a/skills.html
+++ b/skills.html
@@ -14,8 +14,14 @@
     <div class="container">
       <div class="nav__row">
         <a href="/index.html" class="logo"><strong>Freelancer</strong> portfolio</a>
+
+        <button class="dark-mode-btn">
+          <img src="./img/icons/sun-light.svg" alt="Light mode" class="dark-mode-btn__icon">
+          <img src="./img/icons/moon-light.svg" alt="Dark mode" class="dark-mode-btn__icon">
+        </button>
+
         <ul class="nav__list">
-          <li class="nav__list-item"><a href="/projects_page.html" class="nav__list-link">Projects</a></li>
+          <li class="nav__list-item"><a href="/project_page.html" class="nav__list-link">Projects</a></li>
           <li class="nav__list-item"><a href="/skills.html" class="nav__list-link nav__list-link--active">Skills</a></li>
           <li class="nav__list-item"><a href="/contacts.html" class="nav__list-link">Contacts</a></li>
         </ul>
@@ -64,6 +70,6 @@
       
     </div>
   </footer>
-  
+  <script src="script/script.js"></script>
 </body>
 </html>
